# pico_nix

./: .clangd  .gitignore  Justfile  README.md  flake.nix
context/: CONTEXT.md
libs/bme280/: CMakeLists.txt
libs/bme280/include/: bme280.h  bme280_i2c.h
libs/bme280/src/: bme280.c  bme280_i2c.c
libs/bmp180/: CMakeLists.txt
libs/bmp180/include/: bmp180.h  bmp180_i2c.h  i2c_config.h
libs/bmp180/src/: bmp180.c  bmp180_i2c.c  i2c_config.c
libs/i2c0/: CMakeLists.txt
libs/i2c0/include/: i2c_config.h
libs/i2c0/src/: i2c_config.c
libs/i2c1/: CMakeLists.txt
libs/i2c1/include/: i2c1_config.h
libs/i2c1/src/: i2c1_config.c
libs/ina219/: CMakeLists.txt
libs/ina219/include/: ina219.h  ina219_i2c.h
libs/ina219/src/: ina219.c  ina219_i2c.c
libs/pmsa003/: CMakeLists.txt
libs/pmsa003/include/: pmsa003.h
libs/pmsa003/src/: pmsa003.c
libs/ssd1306/: CMakeLists.txt
libs/ssd1306/include/: ssd1306.h
libs/ssd1306/src/: ssd1306.c
nix/builders/: pico-c-project.nix
nix/shells/: c.nix  micropython.nix
projects/bmp180-sensor/: CMakeLists.txt  Justfile  package.nix
projects/bmp180-sensor/src/: main.c
projects/hello-world/: CMakeLists.txt  Justfile  package.nix
projects/hello-world/src/: main.c
projects/pico-w-air-sensor/: CMakeLists.txt  Justfile  lwipopts.h  package.nix
projects/pico-w-air-sensor/enclosure/: pico_w_air_sensor_enclosure.FCMacro
projects/pico-w-air-sensor/src/: main.c  mqtt_ha.c  mqtt_ha.h  provisioning.h
projects/pico-w-env-sensor/: CMakeLists.txt  package.nix
projects/pico-w-env-sensor/src/: main.c  mqtt_ha.c  mqtt_ha.h  provisioning.c  provisioning.h
projects/pico-w-ha-sensor/: CMakeLists.txt  lwipopts.h  package.nix
projects/pico-w-ha-sensor/src/: main.c  mqtt_ha.c  mqtt_ha.h
